symmetrical-broccoli-routetable-us-east-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-cd5233b5", 
        "VpcId": "vpc-f5fa5c8c", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
